Added functionality to the Html using Javascript

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           </p>
         </form>
       </div>
-    </div>
-
+   
+       </div>
     <!-- creating the card to show the result to user using Bulma CSS framework -->
     <section class="section">
       <div class="hero result-header has-text-centered"></div>
@@ -59,7 +59,7 @@
         id="recipes"
       >
         <!-- start -->
-        <div class="column is-flex mt-2 is-3-desktop is-4-tablet is-6-mobile">
+        <!-- <div class="column is-flex mt-2 is-3-desktop is-4-tablet is-6-mobile">
           <div class="card rec-card">
             <div class="card-image is-size-2 has-text-centered">
               <img
@@ -71,7 +71,7 @@
               <p class="title is-size-3 has-text-white">Title</p>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- end -->
       </div>
     </section>
@@ -84,6 +84,7 @@
         </button>
       </div>
     </div>
+ 
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
