Updated html with style.css

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ Find a Meal
       <div class="content">
       <img id="recipe-img" class="infoImg" src="" alt="">
       
+      <!-- Nutritional section starts -->
       <section class="panel is-warning has-text-centered">
         <h2 class="nutrition panel-heading">Nutritional Information</h2>
         <p class="panel-tabs">
@@ -107,7 +108,7 @@ Find a Meal
       </tbody>
       </table>
     </section>
-
+<!-- meal instruction and ingredients -->
       <h3 class="title is-size-4 mt-5 mb-3">Ingredients:</h3>
       <ul id="ingredients"></ul>
       <h3 class="title is-size-4 mt-5 mb-3">Instruction:</h3>
