Adjusted bulma css in style.css for modal

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <section class="hero is-widescreen">
     <div class="hero-body content is-size-2">
-    <h1 class="ml-1 mb-1"> Find A Meal</h1>
+    <h1 class="ml-1 is-size-1-mobile mb-1"> Find A Meal</h1>
     </div>
 </section>
 
@@ -74,6 +74,7 @@ Find a Meal
 
       <header class="modal-card-head">
       <p class="modal-card-title" id="recipe-name"></p>
+      <div><button id="close-popup" class="modal-close is-large" aria-label="close"></button> </div>
       </header>
 
     <section class="modal-card-body">
@@ -116,7 +117,6 @@ Find a Meal
     </div>
   </section>
 </div>
-    <div><button id="close-popup" class="modal-close is-large" aria-label="close"></button> </div>
   </div>
   <!-- jQuery linked -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
